metadataPackage_1670931275320/objects/Bundle_Submitted__e.object
<CustomObject>
    <label>Bundle Submitted</label>
    <pluralLabel>Bundles Submitted</pluralLabel>
    <fields>
        <fullName>Bundle_Id__c</fullName>
        <label>Bundle Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Name__c</fullName>
        <label>Bundle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>